# racard-studio-alpha

./: .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  components.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: tauri.yml
algorithm/: Cargo.toml  build.rs
algorithm/src/: defs.rs  fitness.rs  holiday.rs  lib.rs  main.rs  misc.rs  orchestrator.rs  refiner.rs  statistics.rs  types.rs  utils.rs  validate.rs
algorithm/src/solver/: context.rs  defs.rs  friday.rs  mod.rs  types.rs  weekday.rs  weekend.rs
algorithm/src/tools/: controller.rs  mod.rs  shuffled_slots.rs  solution_storage.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  save.rs  types.rs
src/lib/: actions.ts  api.ts  app.svelte.ts  defs.ts  misc.ts  schemas.ts  slot.ts
src/lib/components/app/: AnalyticsCharts.svelte  AnalyticsDialog.svelte  AnalyticsDistribution.svelte  AnalyticsHeatmap.svelte  AnalyticsSummary.svelte  CheckpointItem.svelte  Checkpoints.svelte  CheckpointsPanel.svelte  ConfigurationPanel.svelte  EmployeeDialog.svelte  HoursGrid.svelte  InspectEmployee.svelte  InspectorConflicts.svelte  InspectorDay.svelte  InspectorPanel.svelte  OperationProgress.svelte  RefinerProgress.svelte  RosterPanel.svelte  ScheduleGrid.svelte  SettingsDialog.svelte  SolverProgress.svelte  StatusBar.svelte  Toolbar.svelte  ToolbarHistory.svelte  ToolbarMenu.svelte  (+2 more)
src/lib/hooks/: useDev.svelte.ts  useGridNavigation.ts  useHotkey.svelte.ts  useProgress.svelte.ts
src/routes/: +layout.svelte  +page.svelte
(+176 files in other folders)
