[package]
name = "algorithm"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14"
nonmax = { version = "0.5", features = ["serde"] }
num_cpus = "1.17"
rand = { version = "0.10", features = ["alloc"] }
rand_distr = "0.6"
rand_pcg = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.20"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
